
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int banner; int * desc; } ;
typedef TYPE_1__ tgt_type ;


 int * strstr (unsigned char*,int ) ;
 TYPE_1__* targets ;

tgt_type *
tgt_frombanner (unsigned char *banner)
{
        int tw;


        for (tw = 0 ; targets[tw].desc != ((void*)0) ; ++tw) {
                if (strstr (banner, targets[tw].banner) != ((void*)0))
                        return (&targets[tw]);
        }

        return (((void*)0));
}
